turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:20: error: type mismatch;
 found   : (((Int, Char, Int), (Int, Char, Int)), ((Int, Char, Int), (Int, Char, Int)))
 required: Array[Array[Array[Int]]]
  rule = (((1,'R',0),(0,'N',0)),((1,'R',1),(0,'N',1)))
         ^Turmite:71: error: ambiguous reference to overloaded definition,
both method init in class Turmite of type ()Unit
and  method init in class Turmite of type ()Unit
match argument types ()
		init();
                ^Turmite:51: error: method init is defined twice
  conflicting symbols both originated in file 'plm.runtime5.Turmite'
def init() {
    ^